--- a/fonts/YuGothic/demo.html
+++ b/fonts/YuGothic/demo.html
@@ -195,7 +195,7 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
     font-style: normal;
 }</pre>
         <pre title="Preload (optional)">
-&lt;link rel=&quot;preload&quot; href=&quot;YuGothic-Regular.woff2&quot; as=&quot;font&quot; type=&quot;font/woff2&quot; crossorigin&gt;</pre>
+&lt;link rel=&quot;preload&quot; href=&quot;YuGothicon-Regular.woff2&quot; as=&quot;font&quot; type=&quot;font/woff2&quot; crossorigin&gt;</pre>
         <div class="font-container" style="font-family: 'Yu Gothic'; font-weight: normal; font-style: normal;">
             <p class="letters">
                 abcdefghijklmnopqrstuvwxyz<br>
@@ -224,7 +224,7 @@ ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
     font-style: normal;
 }</pre>
         <pre title="Preload (optional)">
-&lt;link rel=&quot;preload&quot; href=&quot;YuGothic-Bold.woff2&quot; as=&quot;font&quot; type=&quot;font/woff2&quot; crossorigin&gt;</pre>
+&lt;link rel=&quot;preload&quot; href=&quot;YuGothicon-Bold.woff2&quot; as=&quot;font&quot; type=&quot;font/woff2&quot; crossorigin&gt;</pre>
         <div class="font-container" style="font-family: 'Yu Gothic'; font-weight: bold; font-style: normal;">
             <p class="letters">
                 abcdefghijklmnopqrstuvwxyz<br>
