--- a/single-function.html
+++ b/single-function.html
@@ -26,7 +26,7 @@
                 <hr class="my-3">
                 <p class="-text">単体機能ではなくパッケージを利用されたいですか？</p>
                 <hr class="my-3">
-                <p><a href="#"><i class="ic-angle-right-circle"></i> <strong>パッケージサービスはこちら</strong></a></p>
+                <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>パッケージサービスはこちら</strong></a></p>
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@
                 <hr class="my-3">
                 <p class="-text">単体機能ではなくパッケージを利用されたいですか？</p>
                 <hr class="my-3">
-                <p><a href="#"><i class="ic-angle-right-circle"></i> <strong>パッケージサービスはこちら</strong></a></p>
+                <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>パッケージサービスはこちら</strong></a></p>
               </div>
           </div>
         </div>
