--- a/user-input.html
+++ b/user-input.html
@@ -20,7 +20,7 @@
           <div class="userinput__form mb-4 mb-sm-5">
 
             <div class="el__header">
-              <div class="el__title"><i class="ic-user"></i> 新規会員登録</div>
+              <div class="el__title"><i class="icon-user"></i> 新規会員登録</div>
             </div>
 
               <form action="">
