--- a/RoadHantei_step2.html
+++ b/RoadHantei_step2.html
@@ -59,7 +59,7 @@
         <div class="sc__content -modal-step">
 
             <div class="sc__box__header -small d-flex align-items-center pt-xl-5 pe-0 pb-0">
-              <h4 class="sc__box__title d-none d-md-flex align-items-center"><i class="icon-duong"></i>街路条件判定／幅員測定</h4>
+              <h4 class="sc__box__title d-none d-md-flex align-items-center"><i class="icon-road"></i>街路条件判定／幅員測定</h4>
 
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
