--- a/bukken-input-error.html
+++ b/bukken-input-error.html
@@ -201,7 +201,7 @@
                       <div class="col-lg-20"><div class="el__label">対象地特定</div></div>
                       <div class="col-lg-80">
                         <button type="button" class="btn -s2 me-4 mb-3" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Kouzu0_Modal"><i class="icon-map"></i> 法第14条地図で特定</button>
-                        <button class="btn -s2 mb-3" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-map-marker"></i> 住所で特定</button>
+                        <button class="btn -s2 mb-3" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-search-address"></i> 住所で特定</button>
                       </div>
                     </div><!-- .row -->
                     <hr>
@@ -240,7 +240,7 @@
                       <div class="col-lg-20"><div class="el__label">地積</div></div>
                       <div class="col-lg-80">
                         <button type="button" class="btn -s2 me-4 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Kouzu0_Modal"><i class="icon-map"></i> 法第14条地図で特定</button>
-                        <button class="btn -s2 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-map-marker"></i> 住所で特定</button>
+                        <button class="btn -s2 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-search-address"></i> 住所で特定</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
                             <div class="m2__line d-flex">
@@ -257,7 +257,7 @@
                       <div class="col-lg-80">
                         <button type="button" class="btn -s2 me-4 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Kouzu0_Modal"><i class="icon-map"></i> 法第14条地図で特定</button>
                         <button class="btn -s2 me-4 mb-4"><i class="icon-picture"></i> 航空写真で概測</button>
-                        <button class="btn -s2 mb-4"><i class="icon-map-marker2"></i> その他図面で計測</button>
+                        <button class="btn -s2 mb-4"><i class="icon-map-other"></i> その他図面で計測</button>
                         <div class="row pt-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -278,7 +278,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">標高測定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-judgment"></i> 測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-measure"></i> 測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
                             <div class="m2__line d-flex">
@@ -293,7 +293,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">形状判定・陰地割合測定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-object"></i> 測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-shape-judgement"></i> 測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -429,7 +429,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">接近性測定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-judgment2"></i> 判定／測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-measure-route"></i> 判定／測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
 
@@ -509,7 +509,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">近隣地域判定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-crosshairs"></i> 判定／測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-measure-proximity"></i> 判定／測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -542,7 +542,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">標準的画地判定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-object"></i> 判定／測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-shape-judgement"></i> 判定／測定する</button>
                         <div class="row pt-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -1561,7 +1561,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-flex align-items-center" id="TaishouTokutei_Address_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-flex align-items-center" id="TaishouTokutei_Address_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
             </div>
             <div class="modal-body p-0">
 
@@ -1598,7 +1598,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address1_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address1_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first current"><a href="" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address1_Modal"><span class="number">1</span> 対象地の特定</a></li>
@@ -1654,7 +1654,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address2_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address2_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first done"><a href="" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address1_Modal"><span class="number">1</span> 対象地の特定</a></li>
@@ -1728,7 +1728,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address3_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address3_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first done"><a href="" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address1_Modal"><span class="number">1</span> 対象地の特定</a></li>
@@ -1791,7 +1791,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-flex align-items-center" id="RoadHantei_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-flex align-items-center" id="RoadHantei_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
             </div>
             <div class="modal-body">
 
@@ -1828,7 +1828,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei1_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei1_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first current"><a href="" data-bs-toggle="modal" data-bs-target="#RoadHantei_Modal"><span class="number">1</span> 幅員を測定</a></li>
@@ -1898,7 +1898,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei3_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei3_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first done"><a href="" data-bs-toggle="modal" data-bs-target="#RoadHantei_Modal"><span class="number">1</span> 幅員を測定</a></li>
@@ -1981,7 +1981,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei4_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei4_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
             </div>
             <div class="modal-body pt-0">
 
@@ -2021,7 +2021,7 @@
                       </div>
                       <div class="ms-auto mb-3 mb-sm-0">
                         <div>
-                          <a href="" class="btn -s2 -mask"><i class="icon-duong"></i>判定／測定する</a>
+                          <a href="" class="btn -s2 -mask"><i class="icon-road"></i>判定／測定する</a>
                         </div>
                       </div>
                     </div>
