--- a/bukken-input.html
+++ b/bukken-input.html
@@ -187,7 +187,7 @@
                       <div class="col-lg-20"><div class="el__label">対象地特定</div></div>
                       <div class="col-lg-80">
                         <button type="button" class="btn -s2 me-4 mb-3" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Kouzu0_Modal"><i class="icon-map"></i> 法第14条地図で特定</button>
-                        <button class="btn -s2 mb-3" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-map-marker"></i> 住所で特定</button>
+                        <button class="btn -s2 mb-3" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-search-address"></i> 住所で特定</button>
                       </div>
                     </div><!-- .row -->
                     <hr>
@@ -226,7 +226,7 @@
                       <div class="col-lg-20"><div class="el__label">地積</div></div>
                       <div class="col-lg-80">
                         <button type="button" class="btn -s2 me-4 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Kouzu0_Modal"><i class="icon-map"></i> 法第14条地図で特定</button>
-                        <button class="btn -s2 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-map-marker"></i> 住所で特定</button>
+                        <button class="btn -s2 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address_Modal"><i class="icon-search-address"></i> 住所で特定</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
                             <div class="m2__line d-flex">
@@ -243,7 +243,7 @@
                       <div class="col-lg-80">
                         <button type="button" class="btn -s2 me-4 mb-4" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Kouzu0_Modal"><i class="icon-map"></i> 法第14条地図で特定</button>
                         <button class="btn -s2 me-4 mb-4"><i class="icon-picture"></i> 航空写真で概測</button>
-                        <button class="btn -s2 mb-4"><i class="icon-map-marker2"></i> その他図面で計測</button>
+                        <button class="btn -s2 mb-4"><i class="icon-map-other"></i> その他図面で計測</button>
                         <div class="row pt-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -264,7 +264,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">標高測定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-judgment"></i> 測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-measure"></i> 測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
                             <div class="m2__line d-flex">
@@ -279,7 +279,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">形状判定・陰地割合測定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-object"></i> 測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-shape-judgement"></i> 測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -415,7 +415,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">接近性測定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-judgment2"></i> 判定／測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-measure-route"></i> 判定／測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6">
 
@@ -495,7 +495,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">近隣地域判定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-crosshairs"></i> 判定／測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-measure-proximity"></i> 判定／測定する</button>
                         <div class="row pt-3 pb-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -528,7 +528,7 @@
                     <div class="row pt-3">
                       <div class="col-lg-20"><div class="el__label">標準的画地判定</div></div>
                       <div class="col-lg-80">
-                        <button class="btn -s2 me-4 mb-4"><i class="icon-object"></i> 判定／測定する</button>
+                        <button class="btn -s2 me-4 mb-4"><i class="icon-shape-judgement"></i> 判定／測定する</button>
                         <div class="row pt-3">
                           <div class="col-md-6 mb-4">
                             <div class="m2__line d-flex">
@@ -1484,7 +1484,7 @@
                 </ul>
               </div>
             </div>
-            <div class="modal-body pt-0">
+            <div class="modal-body pt-md-3">
 
               <div class="bmodal__list">
                 <ul class="mb-5 text-center text-sm-start">
@@ -1547,7 +1547,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-flex align-items-center" id="TaishouTokutei_Address_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-flex align-items-center" id="TaishouTokutei_Address_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
             </div>
             <div class="modal-body p-0">
 
@@ -1584,7 +1584,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address1_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address1_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first current"><a href="" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address1_Modal"><span class="number">1</span> 対象地の特定</a></li>
@@ -1640,7 +1640,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address2_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address2_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first done"><a href="" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address1_Modal"><span class="number">1</span> 対象地の特定</a></li>
@@ -1714,7 +1714,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address3_ModalLabel"><i class="icon-maker-map me-3"></i>住所で特定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="TaishouTokutei_Address3_ModalLabel"><i class="icon-search-address me-3"></i>住所で特定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first done"><a href="" data-bs-toggle="modal" data-bs-target="#TaishouTokutei_Address1_Modal"><span class="number">1</span> 対象地の特定</a></li>
@@ -1723,7 +1723,7 @@
                 </ul>
               </div>
             </div>
-            <div class="modal-body pt-0 d-flex flex-column">
+            <div class="modal-body pt-md-3 d-flex flex-column">
 
                 <div class="bmodal__list">
                   <ul class="mb-5 text-center text-sm-start">
@@ -1777,9 +1777,9 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-flex align-items-center" id="RoadHantei_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-flex align-items-center" id="RoadHantei_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body pt-0">
 
               <div class="b__map__iframe d-flex align-items-center justify-content-center">
                 <div class="text-center w-100">
@@ -1814,7 +1814,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei1_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei1_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first current"><a href="" data-bs-toggle="modal" data-bs-target="#RoadHantei_Modal"><span class="number">1</span> 幅員を測定</a></li>
@@ -1884,7 +1884,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei3_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei3_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
                   <li class="first done"><a href="" data-bs-toggle="modal" data-bs-target="#RoadHantei_Modal"><span class="number">1</span> 幅員を測定</a></li>
@@ -1893,53 +1893,53 @@
                 </ul>
               </div>
             </div>
-            <div class="modal-body pt-0">
+            <div class="modal-body pt-md-3">
 
                 <div class="bmodal__list">
                   <ul class="mb-5 text-center text-sm-start">
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">接面道路区分①</div>
+                      <div class="-li-w120 bmodal__list__lable">接面道路区分①</div>
                       <div>前面道路</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">建築法上の区分</div>
+                      <div class="-li-w120 bmodal__list__lable">建築法上の区分</div>
                       <div>第42条1項号</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">道路幅員</div>
+                      <div class="-li-w120 bmodal__list__lable">道路幅員</div>
                       <div>36.00m</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">方位</div>
+                      <div class="-li-w120 bmodal__list__lable">方位</div>
                       <div>南</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">種類</div>
+                      <div class="-li-w120 bmodal__list__lable">種類</div>
                       <div>国道</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">名称</div>
+                      <div class="-li-w120 bmodal__list__lable">名称</div>
                       <div>—</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">セットバック</div>
+                      <div class="-li-w120 bmodal__list__lable">セットバック</div>
                       <div>不要</div>
                     </li>
 
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">歩道の状態</div>
+                      <div class="-li-w120 bmodal__list__lable">歩道の状態</div>
                       <div>有</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">舗装の種類</div>
+                      <div class="-li-w120 bmodal__list__lable">舗装の種類</div>
                       <div>アスファルト</div>
                     </li>
                     <li class="d-sm-flex">
-                      <div class="-li-w220 bmodal__list__lable">舗装の状態</div>
+                      <div class="-li-w120 bmodal__list__lable">舗装の状態</div>
                       <div>優る</div>
                     </li>
                   </ul>
-                  <div class="d-none d-lg-block text-center">
+                  <div class="d-none d-lg-block text-center mt-auto pb-5">
                     <a href="" class="btn -brown -small">測定をやり直す</a>
                     <a href="" class="btn -plus -small ms-3" data-bs-toggle="modal" data-bs-target="#RoadHantei4_Modal">この内容で保存する</a>
                   </div>
@@ -1967,14 +1967,14 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title d-none d-md-flex align-items-center" id="RoadHantei4_ModalLabel"><i class="icon-duong me-3"></i>街路条件判定／幅員測定</h4>
+              <h4 class="modal-title d-flex align-items-center" id="RoadHantei4_ModalLabel"><i class="icon-road me-3"></i>街路条件判定／幅員測定</h4>
             </div>
-            <div class="modal-body pt-0">
+            <div class="modal-body pt-md-3">
 
               <div class="bmodal__list">
               <ul class="mb-5 text-center text-sm-start">
                 <li class="d-md-flex">
-                  <div class="-li-w220 bmodal__list__lable">接面状況区分</div>
+                  <div class="-li-w120 bmodal__list__lable">接面状況区分</div>
                   <div>
                     <select name="" id="" class="minw170px">
                       <option value="">二方路</option>
@@ -1984,10 +1984,12 @@
                   </div>
                 </li>
                 <li class="d-md-flex">
-                  <div class="-li-w220 bmodal__list__lable d-none d-sm-block">接面道路区分</div>
+                  <div class="-li-w120 bmodal__list__lable d-none d-sm-block">接面道路区分</div>
                   <div class="flex-grow-1">
                     <div class="d-sm-flex align-items-center mb-3 mb-sm-0">
-                      <div class="minw100px bmodal__list__label">区分①</div>
+                      <div class="minw100px bmodal__list__label">
+                        <div class="d-none d-md-block">区分①</div><div class="d-md-none">接面道路区分①</div>
+                      </div>
                       <div class="mb-3 mb-sm-0">前面道路</div>
                       <div class="ms-auto">
                         <a href="" class="b__links"><i class="icon-edit"></i> <u>編集する</u></a>
@@ -1997,7 +1999,9 @@
                     </div>
                     <hr class="d-none d-sm-block my-3">
                     <div class="d-sm-flex align-items-center">
-                      <div class="minw100px bmodal__list__label">区分②</div>
+                      <div class="minw100px bmodal__list__label">
+                        <div class="d-none d-md-block">区分②</div><div class="d-md-none">接面道路区分②</div>
+                      </div>
                       <div class="mb-3 mb-sm-0">
                         <select name="" id="" class="minw170px">
                           <option value="">背面道路</option>
@@ -2007,7 +2011,7 @@
                       </div>
                       <div class="ms-auto mb-3 mb-sm-0">
                         <div>
-                          <a href="" class="btn -s2 -mask"><i class="icon-duong"></i>判定／測定する</a>
+                          <a href="" class="btn -s2 -mask"><i class="icon-road"></i>判定／測定する</a>
                         </div>
                       </div>
                     </div>
@@ -2018,7 +2022,7 @@
                   </div>
                 </li>
               </ul>
-              <div class="d-none d-lg-block text-center">
+              <div class="d-none d-lg-block mt-auto text-center">
                 <a href="" class="btn -brown -small">測定をやり直す</a>
                 <a href="" class="btn -plus -small ms-3">この内容で保存する</a>
               </div>
