--- a/bukken-input.html
+++ b/bukken-input.html
@@ -1205,6 +1205,8 @@
                       </div>
                     </div>
                     <div class="table__fake__content">
+
+
                       <div class="table__fake__tr row gx-0">
                         <div class="col-12 col-md-8 col-xl-9 pe-xl-3">
                           <div class="table__fake__td d-flex">
@@ -1215,13 +1217,12 @@
                             <span class="text-truncate">ファイル名ダミーですテキストダミー.pdf</span>
                           </div>
                         </div>
-                        <div class="col-4 col-md-4 d-none d-md-block pe-3">
+                        <div class="col-4 col-md-4 col-xl-3 d-none d-md-block pe-3">
                           <div class="table__fake__td">
                             <span>2021.12.13</span>
                           </div>
                         </div>
                       </div>
-
                       <div class="table__fake__tr row gx-0">
                         <div class="col-12 col-md-8 col-xl-9 pe-xl-3">
                           <div class="table__fake__td d-flex">
